--- a/Guilherme/JavaScript/Html/DOM/DOM.css
+++ b/Guilherme/JavaScript/Html/DOM/DOM.css
@@ -1,4 +1,10 @@
-#pato{font-size: 100px;}
+#pato{font-size: 200px;
+text-align: center;}
+
+#patinho{
+    font-size: 40px;
+    text-align: center;
+}
 
 .ret{
     padding-top: 40px;
