--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
@@ -1,3 +1,85 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-family:sans-serif;
+}
+
+.btn-primary{
+    background: #1DB954;
+    color: white;
+    padding: 15px 60px;
+    border: none;
+    border-radius: 30px;
+}
+
+#navbar{
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+#navbar .navbar-container {
+    width: 60%;
+    display: flex;
+    align-items:center ;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+
+#navbar .navbar-container .logo{
+    height: 50px;
+    width: auto;
+}
+
+#navbar .navbar-container ul{
+    display: flex;
+    list-style: none;
+    font-weight: bold;
+}
+
+#navbar .navbar-container ul li{
+    padding:0 20px;
+}
+
+#navbar .navbar-container ul li:nth-child(3){
+    border-right: 1px solid white;
+}
+
+#showcase {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#showcase .showcase-contanier{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+#showcase .showcase-contanier{
+    background: url(https://www.sociedadenerd.com.br/wp-content/uploads/2023/02/filme-FNAF-Five-Nights-at-Freddy-s.jpg) center center/cover;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    background-blend-mode: color;
+
+}
+
+#showcase .showcase-contanier h2{
+    font-size: 5rem;
+
+}
+
+#showcase .showcase-contanier p{
+
 }
