--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
@@ -5,37 +5,39 @@
 }
 
 body{
-    font-family:sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
+
 }
 
 .btn-primary{
-    background: #1DB954;
+    background:#1db954;
     color: white;
-    padding: 15px 60px;
-    border: none;
+    text-transform: uppercase;
+    padding: 15px 50px;
+    border:none;
     border-radius: 30px;
 }
 
 #navbar{
     display: flex;
     background-color: rgba(0, 0, 0, 0.6);
-    color: white;
     justify-content: center;
     position: fixed;
     top: 0;
     width: 100%;
+    color: white;
 }
 
-#navbar .navbar-container {
+#navbar .navbar-container{
     width: 60%;
     display: flex;
-    align-items:center ;
+    align-items: center;
     justify-content: space-between;
     padding: 20px 0;
 }
 
 #navbar .navbar-container .logo{
-    height: 50px;
+    height: 40px;
     width: auto;
 }
 
@@ -46,40 +48,34 @@ body{
 }
 
 #navbar .navbar-container ul li{
-    padding:0 20px;
+    padding: 0 20px;
 }
 
 #navbar .navbar-container ul li:nth-child(3){
-    border-right: 1px solid white;
+    border-left:1px solid white ;
 }
 
-#showcase {
+#showcase{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    background: url('https://www.sociedadenerd.com.br/wp-content/uploads/2023/02/filme-FNAF-Five-Nights-at-Freddy-s.jpg')center center/cover;
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: color;
 }
 
-#showcase .showcase-contanier{
+#showcase .showcase-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: white;
-}
-#showcase .showcase-contanier{
-    background: url(https://www.sociedadenerd.com.br/wp-content/uploads/2023/02/filme-FNAF-Five-Nights-at-Freddy-s.jpg) center center/cover;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    background-blend-mode: color;
-
 }
 
-#showcase .showcase-contanier h2{
+#showcase .showcase-container h2{
     font-size: 5rem;
-
 }
 
-#showcase .showcase-contanier p{
-
+#showcase .showcase-container  p{
+    margin: 15px;
 }
