--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
@@ -1,3 +1,8 @@
+:root{
+    --defaut-green:#1db954;
+    --light-green:#1ed760;
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -10,12 +15,19 @@ body{
 }
 
 .btn-primary{
-    background:#1db954;
+    background:var(--defaut-green);
     color: white;
     text-transform: uppercase;
     padding: 15px 50px;
     border:none;
     border-radius: 30px;
+    transition: all 300ms ease;
+}
+
+.btn-primary:hover{
+    background:var(--light-green);
+    cursor: pointer;
+    padding: 17px 52px;
 }
 
 #navbar{
@@ -36,7 +48,7 @@ body{
     padding: 20px 0;
 }
 
-#navbar .navbar-container .logo{
+.logo{
     height: 40px;
     width: auto;
 }
@@ -49,6 +61,12 @@ body{
 
 #navbar .navbar-container ul li{
     padding: 0 20px;
+    transition: all 300ms ease;
+}
+
+#navbar .navbar-container ul li:hover{
+    color: #1db954;
+    cursor: pointer;
 }
 
 #navbar .navbar-container ul li:nth-child(3){
@@ -78,4 +96,103 @@ body{
 
 #showcase .showcase-container  p{
     margin: 15px;
+}
+
+#footer{
+    background-color: black;
+    color: white;
+    padding: 80px 0;
+}
+
+#footer .footer-content{
+    display: flex;
+    width: 60%;
+    margin: auto;
+    justify-content: space-between;
+}
+
+#footer .footer-content .footer-menu{
+    margin: 0 40px;
+    list-style: none;
+}
+
+#footer .footer-content .footer-menu .footer-menu-item{
+    margin: 20px 0;
+    transition: all 300ms ease;
+}
+
+#footer .footer-content .footer-menu .footer-menu-item:hover{
+    color: var(--defaut-green);
+    cursor: pointer;
+}
+
+#footer .footer-content .footer-menu p{
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #919496;
+    font-size: 0.8rem;
+}
+
+.socials{
+    display: flex;
+}
+
+.socials i{
+    margin: 0 20px;
+    font-size: 1.7rem;
+    transition: all 300ms ease;
+}
+
+.socials i:hover{
+    color: var(--defaut-green);
+    cursor: pointer;
+}
+
+.footer-info{
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+    margin: auto;
+    font-weight: bold;
+    color: #919496;
+    font-size: 0.75rem;
+    padding-top: 50px;
+}
+
+.footer-info .footer-itens {
+    display: flex;
+    list-style: none;
+}
+
+.footer-info .footer-itens .footer-info-item{
+    margin: 0 10px;
+    transition: all 300ms ease;
+}
+
+.footer-info .footer-itens .footer-info-item:hover{
+    color: var(--defaut-green);
+    cursor: pointer;
+}
+
+.footer-info .rights .country{
+    margin-bottom: 10px;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-info .rights .country p:hover{
+    color: var(--defaut-green);
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
+.footer-info .rights .country .brasil-flag{
+    height: 20px;
+    width: auto; 
+    justify-content: end;
+    display: inline-block;
+    margin-left: 10px ;
 }
