--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.css
@@ -64,6 +64,11 @@ body{
     transition: all 300ms ease;
 }
 
+#navbar .navbar-container .navbar-item{
+    background-color: #919496;
+    border-radius: 20px;
+}
+
 #navbar .navbar-container ul li:hover{
     color: #1db954;
     cursor: pointer;
@@ -168,7 +173,7 @@ body{
 
 .footer-info .footer-itens .footer-info-item{
     margin: 0 10px;
-    transition: all 300ms ease;
+    transition: all 300ms ease; 
 }
 
 .footer-info .footer-itens .footer-info-item:hover{
