--- a/Guilherme/Html E CSS/portifóliu/port/portEv.css
+++ b/Guilherme/Html E CSS/portifóliu/port/portEv.css
@@ -1,5 +1,5 @@
 :root {
-    --Cor2: rgb(208, 153, 15);
+    --Cor2: rgb(25, 208, 15);
 }
 
 *{
@@ -15,7 +15,7 @@
 }
 
 .background {
-    background-image: url(Fundo.jpg);
+    background-image: url();
     image-rendering: optimizeQuality;
     background-color: #101010;
     height: 100vh;
@@ -61,7 +61,6 @@ nav {
     user-select: none;
     padding-top: 20px;
     user-select: none;
-    pointer-events: none;
 }
 
 nav ul {
@@ -431,18 +430,25 @@ h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
+.logo {
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
 p {
     font-family: 'Lato', sans-serif;
 }
 
-a:hover, button:hover, .qualidade:hover {
+a:hover, button:hover, .qualidade:hover, .logo:hover {
     color: var(--Cor2);
 }
 
-.Card, #IMGP, .cabeçalho-link li, .qualidade, .Redes-sociais a, .btn{
+.Card, #IMGP, .cabeçalho-link li, .qualidade, .Redes-sociais a, .btn, .logo{
     transition: all 0.3s ease;
 }
 
-.Card:hover, #IMGP:hover, .cabeçalho-link li:hover, .qualidade:hover, .Redes-sociais a:hover, .btn:hover {
+.Card:hover, #IMGP:hover, .cabeçalho-link li:hover, .qualidade:hover, .Redes-sociais a:hover, .btn:hover, .logo:hover {
     transform: scale(1.1);
 }
